--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@
   font-family: "Poppins", sans-serif;
 }
 
+html, body {
+  overflow-x: hidden;
+  width: 100%;
+}
+
 /* VARIABLES */
 :root {
   /* === THEME COLORS === */
