styling and layout adjustments for the portfolio website

--- a/style.css
+++ b/style.css
@@ -128,7 +128,7 @@ body.light-mode header {
   position: sticky;
   top: 0;
   left: 0;
-  width: 100vw;
+  width: 100%;
   z-index: 1000;
   background: var(--bg-color);
 
