--- a/style.css
+++ b/style.css
@@ -758,7 +758,6 @@ section h4 {
 .project-card {
   display: flex;               
   flex-direction: column;      
-  justify-content: space-between;
   opacity: 0;
   transform: translateY(30px);
   transition: opacity 0.6s ease, transform 0.6s ease;
@@ -778,8 +777,11 @@ section h4 {
 }
 
 .project-overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   background: rgba(0, 49, 37, 0.459);
-  padding: 1rem;
+  padding: 2rem;
   width: 100%;
   height: 100%;
   color: white;
@@ -788,19 +790,18 @@ section h4 {
 
 .project-card h3 {
   color: #22f3fa;
-  margin-bottom: 0.5rem;
 }
 
 .project-card p {
   font-size: 0.9rem;
-  margin-bottom: 10px;
+  margin-bottom: 2rem;
   color: #e3e9ec;
   flex-grow: 1;
 }
 
 .project-link {
   display: inline-block;
-  padding: 8px 15px;
+  padding: 8px 5px;
   background: #00bdc4;
   color: white;
   border-radius: 6px;
